--- a/Kiosk/en.lproj/Localizable.strings
+++ b/Kiosk/en.lproj/Localizable.strings
@@ -1,48 +1,41 @@
-/* 
-  Localizable.strings
-  Kiosk
 
-  Created by CHYUN on 11/27/24.
-  
-*/
+"won" = "won";
+"total" = "Total";
+"gae" = "";
+"cancelAll" = "Cancel all";
+"payment" = "Payment";
 
-"won" = "won"
-"total" = "Total"
-"gae" = ""
-"cancelAll" = "Cancel all"
-"payment" = "Payment"
+"modalTitle" = "Complete payment";
+"modalMessage" = "Your order has been paid for!";
 
-"modalTitle" = "Complete payment"
-"modalMessage" = "Your order has been paid for!"
-
-"fishBun" = "FishBun"
-"fishBunResBean" = "Red bean Flavor"
-"fishBunCustard" = "Custard Flavor"
-"fishBunCheese" = "Cheese Flavor"
-"fishBunChoco" = "Chocolate Flavor"
-"fishBunPizza" = "Pizza Flavor"
-"fishBunMatcha" = "Matcha Flavor"
+"fishBun" = "FishBun";
+"fishBunResBean" = "Red bean Flavor";
+"fishBunCustard" = "Custard Flavor";
+"fishBunCheese" = "Cheese Flavor";
+"fishBunChoco" = "Chocolate Flavor";
+"fishBunPizza" = "Pizza Flavor";
+"fishBunMatcha" = "Matcha Flavor";
 
 
-"hoppang" = "Hoppang"
-"hoppangHoney" = "Honey Hotteok"
-"hoppangBubble" = "Bubble Hotteok"
-"hoppangRedBean" = "Red bean Hoppang"
-"hoppangMatcha" = "Matcha Hoppang"
-"hoppangChoco" = "Chocolate Hoppang"
+"hoppang" = "Hoppang";
+"hoppangHoney" = "Honey Hotteok";
+"hoppangBubble" = "Bubble Hotteok";
+"hoppangRedBean" = "Red bean Hoppang";
+"hoppangMatcha" = "Matcha Hoppang";
+"hoppangChoco" = "Chocolate Hoppang";
 
 
-"skewer" = "Skewer"
-"skewerSoySauce" = "Soy sauce Flavor"
-"skewerGreenOnion" = "Green onion Flavor"
-"skewerHotFried" = "Hot Fried Flavor"
-"skewerFried" = "Fried Flavor"
-"skewerHotBar" = "Hot bar"
+"skewer" = "Skewer";
+"skewerSoySauce" = "Soy sauce Flavor";
+"skewerGreenOnion" = "Green onion Flavor";
+"skewerHotFried" = "Hot Fried Flavor";
+"skewerFried" = "Fried Flavor";
+"skewerHotBar" = "Hot bar";
 
 
-"else" = "Else"
-"roastedChestnuts" = "Roasted Chestnuts"
-"roastedSweetPotatoes" = "Roasted Sweet Potatoes"
-"takoyaki" = "Takoyaki"
-"tenWonBread" = "Ten won bread"
-"deliManju" = "Deli manju"
+"else" = "Else";
+"roastedChestnuts" = "Roasted Chestnuts";
+"roastedSweetPotatoes" = "Roasted Sweet Potatoes";
+"takoyaki" = "Takoyaki";
+"tenWonBread" = "Ten won bread";
+"deliManju" = "Deli manju";
