feat: 이미지 에셋 추가

--- a/Kiosk/en.lproj/Localizable.strings
+++ b/Kiosk/en.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 "modalMessage" = "Your order has been paid for!";
 
 "fishBun" = "FishBun";
-"fishBunResBean" = "Red bean Flavor";
+"fishBunRedBean" = "Red bean Flavor";
 "fishBunCustard" = "Custard Flavor";
 "fishBunCheese" = "Cheese Flavor";
 "fishBunChoco" = "Chocolate Flavor";
