--- a/Kiosk/ko.lproj/Localizable.strings
+++ b/Kiosk/ko.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 "modalMessage" = "주문하신 내역이 결제 되었습니다!";
 
 "fishBun" = "붕어빵";
-"fishBunResBean" = "팥 붕어빵";
+"fishBunRedBean" = "팥 붕어빵";
 "fishBunCustard" = "슈크림 붕어빵";
 "fishBunCheese" = "치즈 붕어빵";
 "fishBunChoco" = "초코 붕어빵";
