feat: 외국어 설정 및 세부 내용 수정

--- a/Kiosk/en.lproj/Localizable.strings
+++ b/Kiosk/en.lproj/Localizable.strings
@@ -3,10 +3,12 @@
 "total" = "Total";
 "gae" = "";
 "cancelAll" = "Cancel all";
+"pay" = "Pay";
 "payment" = "Payment";
 
 "modalTitle" = "Complete payment";
 "modalMessage" = "Your order has been paid for!";
+"empty" = "Empty";
 
 "fishBun" = "FishBun";
 "fishBunRedBean" = "Red bean Flavor";
