feat: 직원 호출 버튼 Alert, 삭제 버튼 이미지 에셋 교체

--- a/Kiosk/en.lproj/Localizable.strings
+++ b/Kiosk/en.lproj/Localizable.strings
@@ -8,6 +8,10 @@
 
 "modalTitle" = "Complete payment";
 "modalMessage" = "Your order has been paid for!";
+"callModalTitle" = "Help";
+"callModalMessage" = "Would you like to call for a staff?";
+"call" = "call";
+"cancel" = "cancel";
 "empty" = "Empty";
 
 "fishBun" = "FishBun";
